DOC: update changelog and release notes for manual test filtering fix
Updated documentation to reflect the fix for manual test filtering with
same-name tests. Added detailed before/after examples, implementation
details, and test coverage information.

--- a/AI/releases/v0.8.30.md
+++ b/AI/releases/v0.8.30.md
@@ -2,35 +2,104 @@
 
 Released: TBD
 
-## Bug Fixes
-
-### Monitor Mode Not Streaming Output in Real-Time
-
-Fixed `--monitor` (`-m`) flag not streaming test output in real-time during test execution. Output now appears progressively as tests run instead of only after completion.
-
-**Root Causes:**
-
-1. **C Tests:** The `testme.h` header functions (`tinfo`, `tdebug`, `tskip`, `twrite`, `tReport`) were not flushing stdout/stderr after printf calls, causing buffered output when stdout was piped to the test runner.
-
-2. **TTY Check:** The `base.ts` handler was enforcing a strict TTY check (`process.stdout.isTTY === true`), preventing streaming when user explicitly requested `--monitor` but output was piped.
-
-**Fixes:**
-
--   Added `fflush(stdout)` and `fflush(stderr)` after all printf/fprintf calls in C test utility functions
--   Removed strict TTY requirement - when user explicitly requests `--monitor`, honor it regardless of TTY status
--   Added description parameter to `runCommand` calls for better timeout error messages
-
-**Impact:** Long-running tests (like memory leak detection) now show progress in real-time when using `--monitor` flag.
-
-### Go Tests Skipped on Windows
-
-Added platform detection to skip Go tests on Windows. Go tests are now automatically skipped on Windows platforms where the Go toolchain may not be available or compatible.
-
-**Change:** Updated `test/go/skip.js` to detect Windows platform (`process.platform === 'win32'`) and skip tests before checking for Go installation.
-
-**Impact:** Tests no longer fail on Windows CI/CD pipelines due to missing Go support.
-
 ## Enhancements
+
+### Timeout CLI Override
+
+Added `--timeout <SECONDS>` (`-t`) CLI flag to override the configured test timeout for a test run. This allows setting a custom timeout without modifying configuration files.
+
+**Features:**
+
+- Overrides `execution.timeout` from testme.json5
+- Accepts timeout value in seconds
+- Must be a positive integer
+- Applies to all tests in the run
+- Can be combined with other options like `--verbose`, `--workers`, etc.
+
+**Usage Examples:**
+
+```bash
+tm --timeout 60 "long-test"         # 60 second timeout for specific test
+tm -t 120 "*.tst.c"                 # 2 minute timeout for all C tests
+tm --timeout 300                    # 5 minute timeout for all tests
+```
+
+**Implementation:**
+
+- CLI flag parsing in [src/cli.ts:213-225](src/cli.ts#L213-L225)
+- Configuration override in [src/index.ts:740-746](src/index.ts#L740-L746)
+- Type definition in [src/types.ts:254](src/types.ts#L254)
+- Documentation updates in man page and CLI help
+
+**Use Cases:**
+
+- Override timeout for specific test runs without changing config
+- Use longer timeouts for debugging or slow CI/CD environments
+- Use shorter timeouts for quick feedback during development
+
+### Manual Enable Directory Detection
+
+Enhanced `enable: "manual"` configuration to automatically run manual tests when `tm` is invoked from within the manual directory or its subdirectories without patterns.
+
+**Previous Behavior:**
+
+Tests with `enable: "manual"` only ran when explicitly named by pattern (e.g., `tm testname`).
+
+**New Behavior:**
+
+Tests with `enable: "manual"` now run in two scenarios:
+
+1. When explicitly named: `tm testname` (existing behavior)
+2. When `tm` is invoked from within the manual directory without patterns: `cd manual_test_dir && tm`
+
+**Features:**
+
+- Detects if current working directory is within or equal to the config directory
+- Treats invocation from manual directory as an explicit manual request
+- Applies to both test execution and `--list` command
+- Does not affect pattern-based invocations from parent directories
+- Provides clearer verbose output: "✓ Running manual tests in: . (invoked from manual directory)"
+
+**Usage Examples:**
+
+```bash
+# Directory structure:
+# /project/test/manual/testme.json5 (enable: "manual")
+# /project/test/manual/slow.tst.c
+
+# From parent directory - skips manual tests
+cd /project/test
+tm                                   # Skips manual tests (not invoked from manual dir)
+tm "*.tst.c"                         # Skips manual tests (wildcard pattern)
+
+# From manual directory - runs manual tests
+cd /project/test/manual
+tm                                   # Runs manual tests (invoked from manual dir)
+tm --list                            # Lists manual tests (invoked from manual dir)
+
+# From subdirectory of manual directory - runs manual tests
+cd /project/test/manual/subdir
+tm                                   # Runs manual tests in parent (invoked from within manual tree)
+
+# Explicit naming - always works
+cd /project/test
+tm slow                              # Runs manual test (explicitly named)
+tm manual/slow.tst.c                 # Runs manual test (explicitly named)
+```
+
+**Implementation:**
+
+- Test execution logic in [src/index.ts:468-510](src/index.ts#L468-L510)
+- List command logic in [src/runner.ts:348-390](src/runner.ts#L348-L390)
+- Path separator import in [src/index.ts:11](src/index.ts#L11)
+- Documentation updates in man page
+
+**Use Cases:**
+
+- Developers working on manual tests can simply run `tm` in the test directory
+- No need to remember test names or use patterns when in the manual directory
+- Maintains protection from accidental execution when running from parent directories
+- Useful for slow tests, destructive tests, or tests requiring special setup
 
 ### Duration Flag for Test Control
 
@@ -71,9 +140,81 @@ tm --duration 1day "endurance-test"     # 1 day = 86400 seconds
 -   Performance tests with configurable run times
 -   Integration tests with timeout-based scenarios
 
+## Bug Fixes
+
+### Monitor Mode Not Streaming Output in Real-Time
+
+Fixed `--monitor` (`-m`) flag not streaming test output in real-time during test execution. Output now appears progressively as tests run instead of only after completion.
+
+**Root Causes:**
+
+1. **C Tests:** The `testme.h` header functions (`tinfo`, `tdebug`, `tskip`, `twrite`, `tReport`) were not flushing stdout/stderr after printf calls, causing buffered output when stdout was piped to the test runner.
+
+2. **TTY Check:** The `base.ts` handler was enforcing a strict TTY check (`process.stdout.isTTY === true`), preventing streaming when user explicitly requested `--monitor` but output was piped.
+
+**Fixes:**
+
+-   Added `fflush(stdout)` and `fflush(stderr)` after all printf/fprintf calls in C test utility functions
+-   Removed strict TTY requirement - when user explicitly requests `--monitor`, honor it regardless of TTY status
+-   Added description parameter to `runCommand` calls for better timeout error messages
+
+**Impact:** Long-running tests (like memory leak detection) now show progress in real-time when using `--monitor` flag.
+
+### Go Tests Skipped on Windows
+
+Added platform detection to skip Go tests on Windows. Go tests are now automatically skipped on Windows platforms where the Go toolchain may not be available or compatible.
+
+**Change:** Updated `test/go/skip.js` to detect Windows platform (`process.platform === 'win32'`) and skip tests before checking for Go installation.
+
+**Impact:** Tests no longer fail on Windows CI/CD pipelines due to missing Go support.
+
+### Manual Test Filtering with Same-Name Tests
+
+Fixed manual test filtering to prevent running manual tests when using base name patterns from outside the manual directory. When a pattern like `tm tls` was used from a parent directory, it would incorrectly match and run tests with the same base name in subdirectories marked with `enable: 'manual'`, even though they should only run when explicitly targeted with the directory path.
+
+**Previous Behavior:**
+
+```bash
+# Directory structure:
+# /project/test/tls.tst.c
+# /project/test/fuzz/testme.json5 (enable: "manual")
+# /project/test/fuzz/tls.tst.c
+
+cd /project/test
+tm tls                    # Would run BOTH tls.tst.c AND fuzz/tls.tst.c (incorrect)
+```
+
+**Fixed Behavior:**
+
+```bash
+cd /project/test
+tm tls                    # Runs only tls.tst.c (skips fuzz/tls.tst.c)
+tm fuzz/tls               # Runs fuzz/tls.tst.c (explicit directory path)
+tm --list tls             # Lists only tls.tst.c
+tm --list fuzz/tls        # Lists fuzz/tls.tst.c
+
+cd /project/test/fuzz
+tm tls                    # Runs fuzz/tls.tst.c (invoked from manual directory)
+```
+
+**Implementation:**
+
+- Added directory path check for manual tests in [src/index.ts:492-513](src/index.ts#L492-L513)
+- When `enable: 'manual'` and not invoked from manual directory, patterns must explicitly include the directory path
+- Added path-without-test-extension matching in [src/index.ts:360-369](src/index.ts#L360-L369)
+- Applied same fix to `--list` command in [src/runner.ts:369-403](src/runner.ts#L369-L403)
+
+**Test Coverage:**
+
+- Added comprehensive test in [test/config/manual-filtering.tst.ts:100-138](test/config/manual-filtering.tst.ts#L100-L138)
+- Tests verify that base name patterns don't match manual tests from outside directories
+- Tests verify that directory-prefixed patterns do match manual tests
+
+**Impact:** Manual tests are now properly isolated and only run when explicitly intended, preventing accidental execution of tests with common names in manual directories.
+
 ## Upgrade Notes
 
-No breaking changes in this release.
+No breaking changes in this release. The manual enable enhancement is backward compatible - existing behavior with explicit patterns is preserved, with the addition of directory-based detection.
 
 ## Previous Release
 
