DOC: update release notes for v0.8.30 global prep fixes
Added documentation for two bug fixes:

1. Global prep/cleanup output not shown in verbose mode
   - Fixed by applying CLI overrides to rootConfig before service calls
   - Now shows stdout/stderr when using -v flag

2. Global prep not running on Windows
   - Fixed path depth calculation to handle Windows backslashes
   - Normalized paths before splitting to calculate directory depth

Updated AI/releases/v0.8.30.md and AI/logs/CHANGELOG.md

--- a/AI/releases/v0.8.30.md
+++ b/AI/releases/v0.8.30.md
@@ -212,6 +212,78 @@ tm tls                    # Runs fuzz/tls.tst.c (invoked from manual directory)
 
 **Impact:** Manual tests are now properly isolated and only run when explicitly intended, preventing accidental execution of tests with common names in manual directories.
 
+### Global Prep/Cleanup Output Not Shown in Verbose Mode
+
+Fixed global prep and global cleanup scripts not emitting stdout/stderr output when running with the `--verbose` (`-v`) flag. Previously, regular prep/cleanup scripts would show their output in verbose mode, but global prep/cleanup scripts would not.
+
+**Root Cause:**
+
+The `globalPrep` and `globalCleanup` services were using the raw `rootConfig` without applying CLI overrides (such as `--verbose`), while regular prep/cleanup scripts used `mergedConfig` which had CLI overrides applied.
+
+**Fix:**
+
+Applied CLI overrides to `rootConfig` before passing it to `runGlobalPrep()` and `runGlobalCleanup()` methods. This ensures verbose mode works consistently for all service scripts.
+
+**Implementation:**
+
+- Global prep fix in [src/index.ts:451-453](src/index.ts#L451-L453)
+- Global cleanup fix in [src/index.ts:639-645](src/index.ts#L639-L645)
+
+**Behavior:**
+
+```bash
+# Without verbose mode - only shows completion messages
+tm
+# Output: ✓ Global prep completed successfully: prep.sh
+
+# With verbose mode - shows script output
+tm -v
+# Output:
+# Running global prep: prep.sh
+# Global prep: Building shared libraries...
+# Global prep: Done
+# ✓ Global prep completed successfully: prep.sh
+```
+
+**Impact:** Developers can now see debug output from global prep/cleanup scripts when troubleshooting test setup issues.
+
+### Global Prep Not Running on Windows
+
+Fixed global prep scripts not running on Windows when specific test patterns were provided (e.g., `tm test/web/tls`). The issue was caused by incorrect path depth calculation in the `findRootConfig()` method.
+
+**Root Cause:**
+
+The `findRootConfig()` function calculated directory depth by splitting paths on forward slashes (`/`) only. On Windows, paths use backslashes (`\`), so a path like `D:\a\agent\agent\test\web` would be treated as a single segment instead of 6 segments, resulting in incorrect depth values. This prevented the shallowest config from being properly identified.
+
+**Example of the Bug:**
+
+```bash
+# Windows CI/CD environment
+cd D:\a\agent\agent
+tm test/web/tls
+
+# Expected: Global prep from D:\a\agent\agent\testme.json5 should run
+# Actual: Global prep not detected due to incorrect depth calculation
+```
+
+**Fix:**
+
+Normalized Windows backslashes to forward slashes before calculating path depth:
+
+```typescript
+// Before (broken on Windows)
+const depth = currentDir.split('/').filter((s) => s).length
+
+// After (works on all platforms)
+const depth = currentDir.replace(/\\/g, '/').split('/').filter((s) => s).length
+```
+
+**Implementation:**
+
+- Path depth calculation fix in [src/config.ts:232-233](src/config.ts#L232-L233)
+
+**Impact:** Global prep scripts now run correctly on Windows CI/CD pipelines and local Windows development environments.
+
 ## Upgrade Notes
 
 No breaking changes in this release. The manual enable enhancement is backward compatible - existing behavior with explicit patterns is preserved, with the addition of directory-based detection.
