DOC: update release notes for testme.h unused function warning fix
- Added bug fix entry to v0.8.30 release notes
- Updated CHANGELOG.md with detailed implementation notes
- Documents TM_UNUSED macro addition and application to helper functions

--- a/AI/releases/v0.8.30.md
+++ b/AI/releases/v0.8.30.md
@@ -284,6 +284,39 @@ const depth = currentDir.replace(/\\/g, '/').split('/').filter((s) => s).length
 
 **Impact:** Global prep scripts now run correctly on Windows CI/CD pipelines and local Windows development environments.
 
+### Unused Function Warnings in testme.h
+
+Fixed compiler warnings about unused static functions when including `testme.h` in C test files. The `tReport()` and `texit()` helper functions would generate `-Wunused-function` warnings when not all test macros were used in a translation unit.
+
+**Root Cause:**
+
+Static functions defined in header files generate compiler warnings when included but not used by all code paths in a test file.
+
+**Fix:**
+
+Added `TM_UNUSED` macro using `__attribute__((unused))` for GCC/Clang to suppress warnings:
+
+```c
+// Portable unused attribute macro
+#if defined(__GNUC__) || defined(__clang__)
+    #define TM_UNUSED __attribute__((unused))
+#else
+    #define TM_UNUSED
+#endif
+
+// Applied to helper functions
+TM_UNUSED static void tReport(int success, const char *loc, ...)
+TM_UNUSED static void texit(int success)
+```
+
+**Implementation:**
+
+- Added `TM_UNUSED` macro in [src/modules/c/testme.h:51-56](src/modules/c/testme.h#L51-L56)
+- Applied attribute to `tReport()` in [src/modules/c/testme.h:144](src/modules/c/testme.h#L144)
+- Applied attribute to `texit()` in [src/modules/c/testme.h:78](src/modules/c/testme.h#L78)
+
+**Impact:** C tests now compile cleanly with `-Wall -Wextra` without spurious unused function warnings.
+
 ## Upgrade Notes
 
 No breaking changes in this release. The manual enable enhancement is backward compatible - existing behavior with explicit patterns is preserved, with the addition of directory-based detection.
