DOC: update release notes for Windows path separator fix
- Added bug fix entry to v0.8.30 release notes
- Updated CHANGELOG.md with detailed implementation notes
- Documents platform-specific path separator fix for manual test filtering

--- a/AI/releases/v0.8.30.md
+++ b/AI/releases/v0.8.30.md
@@ -284,6 +284,43 @@ const depth = currentDir.replace(/\\/g, '/').split('/').filter((s) => s).length
 
 **Impact:** Global prep scripts now run correctly on Windows CI/CD pipelines and local Windows development environments.
 
+### Manual Test Filtering on Windows with Path Separators
+
+Fixed manual test filtering on Windows when using directory-prefixed patterns. When running `tm manual-dir/test` on Windows, the test would be discovered but then incorrectly filtered out due to a path separator mismatch.
+
+**Root Cause:**
+
+The manual test filtering logic used a hardcoded forward slash (`/`) when removing the root directory prefix from config directory paths: `configDir.replace(rootDir + '/', '')`. On Windows, paths use backslashes, so the replacement failed and the relative path calculation was incorrect.
+
+**Example of the Bug:**
+
+```bash
+# Windows environment with path: D:\test\manual-subdir
+cd D:\test
+tm manual-subdir/same-name
+
+# Expected: Run the manual test in manual-subdir
+# Actual: Test discovered but filtered out (Total: 0) due to path mismatch
+```
+
+**Fix:**
+
+Changed to use platform-specific path separator (`sep` from Node.js `path` module):
+
+```typescript
+// Before (broken on Windows)
+configDir.replace(rootDir + '/', '')
+
+// After (works on all platforms)
+configDir.replace(rootDir + sep, '')
+```
+
+**Implementation:**
+
+- Path separator fix in [src/index.ts:510](src/index.ts#L510)
+
+**Impact:** Manual tests now correctly run on Windows when explicitly named with directory paths.
+
 ### Unused Function Warnings in testme.h
 
 Fixed compiler warnings about unused static functions when including `testme.h` in C test files. The `tReport()` and `texit()` helper functions would generate `-Wunused-function` warnings when not all test macros were used in a translation unit.
