DOC: update documentation for v0.8.31
- Added release notes for v0.8.31
- Updated CHANGELOG with warning option and health check fix
- Updated DESIGN.md with -w flag documentation

--- a/AI/releases/v0.8.30.md
+++ b/AI/releases/v0.8.30.md
@@ -358,6 +358,10 @@ TM_UNUSED static void texit(int success)
 
 No breaking changes in this release. The manual enable enhancement is backward compatible - existing behavior with explicit patterns is preserved, with the addition of directory-based detection.
 
+## Next Release
+
+See [v0.8.31 Release Notes](v0.8.31.md) for the next release.
+
 ## Previous Release
 
 See [v0.8.29 Release Notes](v0.8.29.md) for the previous release.
