DEV: Windows performance optimizations
- C binary caching with mtime comparison (skip recompilation)
- Add --rebuild / -R flag to force recompilation
- Cache Git Bash, PowerShell, and Unix shell paths
- Cache compiler detection and config file lookups
- Cache findInPath results to eliminate where/which spawns
- Replace tasklist subprocess with process.kill(pid, 0)
- Use readdir({ withFileTypes: true }) to reduce stat() calls
- Reduce file deletion retry params (13s → 1.5s worst-case)
- Keep artifacts by default to enable caching

--- a/AI/releases/v0.8.31.md
+++ b/AI/releases/v0.8.31.md
@@ -105,6 +105,30 @@ const response = await fetch(config.url, {
 
 **Impact:** Improved reliability of health checks during service startup, especially for long-running polling scenarios.
 
+### Platform-Specific Exclude Patterns on Windows
+
+Fixed platform-specific exclude patterns in subdirectory testme.json5 configs not working on Windows.
+
+**Issue:** Exclude patterns like `windows: { exclude: ['**/unix.tst.sh'] }` in subdirectory configs were not filtering out tests on Windows.
+
+**Root Cause:** Two issues:
+
+1. `matchesExcludePatterns()` passed raw file paths (with Windows `\` separators) to glob matcher, while patterns use `/`
+2. Initial test discovery used root config patterns only; subdirectory config patterns were not applied during grouping
+
+**Fix:**
+
+1. Updated `matchesExcludePatterns()` to normalize paths (convert `\` to `/`) before matching
+2. Made `matchesExcludePatterns()` public for use during test grouping
+3. Updated `groupTestsByConfig()` to apply each config's exclude patterns when grouping tests
+
+**Implementation:**
+
+- Path normalization in [src/discovery.ts:199-210](src/discovery.ts#L199-L210)
+- Config exclude filtering in [src/index.ts:678-683](src/index.ts#L678-L683)
+
+**Impact:** Subdirectory testme.json5 configs now properly apply platform-specific exclude patterns. Tests excluded by config patterns (e.g., Unix-only tests on Windows) are filtered out during grouping without requiring a root-level config.
+
 ## Upgrade Notes
 
 **Breaking Change:** The `-w` short flag now means `--warning` instead of `--workers`. Update any scripts or CI configurations that use `-w` for workers to use `-W` instead.
